# mp2-lab3-arithmetic

./: CMakeLists.txt  README.md
include/: arithmetic.h  stack.h
samples/: main_arithmetic.cpp
src/: arithmetic.cpp
test/: test_arithmetic.cpp  test_main.cpp  test_stack.cpp
